--- a/src/CSS/Baralho.css
+++ b/src/CSS/Baralho.css
@@ -1,8 +1,7 @@
 .secao-baralho {
-  background-color: rgba(124, 184, 184, 0.644);
   font-family: sans-serif;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   text-align: center;
   padding-bottom: 40px;
 }
@@ -14,7 +13,7 @@
   height: 50px;
   width: 100%;
   align-items: center;
-  padding: 10px 0 10px 0;
+  padding: 0 0 20px 0;
 }
 
 .area-cartas {
@@ -31,7 +30,7 @@
   font-family: sans-serif;
   height: 88%;
   line-height: 1px;
-  margin: 0;
+  margin: 5px;
   max-width: 350px;
   min-width: 320px;
   padding: 10px;
