--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -23,3 +23,58 @@
   transform: scale(1.1);
   transition: 0.1s;
 }
+
+#logo-card{
+  align-items: center;
+  display: flex;
+  width: 45%;
+}
+
+#logo-text {
+  white-space: nowrap;
+  overflow: hidden;
+  animation: aaa 1s steps(10) 1s normal both infinite;
+  border-right: 0.1ch rgb(3, 3, 3) solid;
+  animation: cursor 700ms steps(10) infinite normal;
+}
+
+@keyframes aaa {
+  from {
+    width: 0;
+  }
+  to {
+    width: 150px;
+  };
+}
+
+@keyframes cursor {
+  from {
+    border-right-color: black;
+  }
+  to {
+    border-right-color: transparent;
+  }
+}
+
+/* #logo-card:hover {
+  align-items: center;
+  display: flex;
+  transform: scale(1.1);
+  transition: 0.1s;
+  width: 45%;
+} */
+
+#logo-icon {
+  padding-bottom: 10px;
+}
+
+#botao-area {
+  width: 50%;
+}
+
+.botao-baralho {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  width: 100vw;
+}
