--- a/src/CSS/Search.css
+++ b/src/CSS/Search.css
@@ -4,9 +4,13 @@ a {
 
 .search-area {
   display: flex;
+}
+
+#area-filtro {
+  display: flex;
   align-items: center;
-  flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  width: 80%;
 }
 
 .labels {
@@ -31,28 +35,65 @@ a {
 }
 
 .header-clicked-on {
-  width: 90vw;
+  width: 100vw;
   height: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-}
-
-.area-filtro {
-  display: flex;
-  align-items: center;
-  width: fit-content;
+  justify-content: left;
 }
 
 #label-busca {
   color: aliceblue;
 }
+
+#logo-card-search-on {
+  align-items: center;
+  display: flex;
+  justify-content: left;
+  color: rgb(124, 133, 133);
+  font-size: 18px;
+  width: 12%;
+}
+
+#logo-icon-on {
+padding-bottom: 10px;
+}
+
+#logo-text-search-on {
+  white-space: nowrap;
+  overflow: hidden;
+  animation: aaa 2s steps(12) 1s normal both;
+  border-right: 0.1ch rgb(81, 85, 85) solid;
+}
+
+#logo-text-on:hover {
+  color: rgb(221, 219, 219);
+  transition: 0.5s;
+}
+
+@keyframes aaa {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100px;
+    border-right: 0 rgb(81, 85, 85) solid;
+  };
+}
+
 .header-clicked-off{
-  width: 74.8vw;
+  width: 100vw;
   height: 50px;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  padding-left: 10px;
+}
+
+#links {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
 }
 
 #pesquisa {
@@ -60,7 +101,6 @@ a {
   color: rgb(162, 163, 163);
   border-style: none;
   font-size: 18px;
-  position: relative; right: 15%;
 }
 
 #pesquisa:hover {
@@ -86,4 +126,38 @@ a {
   font-size: 18px;
   transform: scale(1.1);
   transition: 0.1s;
+}
+
+#logo-card-search-off {
+  align-items: center;
+  display: flex;
+  justify-content: left;
+  width: 11%;
+}
+
+#logo-text-search-off {
+  white-space: nowrap;
+  overflow: hidden;
+  color: rgb(81, 85, 85);
+  font-size: 18px;
+  animation: aaa 2s steps(12) 1s normal both;
+  border-right: 0.1ch rgb(81, 85, 85) solid;
+}
+
+@keyframes aaa {
+  from {
+    width: 0;
+  }
+  to {
+    width: 150px;
+    border-right: 0 rgb(81, 85, 85) solid;
+  };
+}
+
+#logo-icon-search-off {
+  padding-bottom: 10px;
+}
+
+#area-botao-on {
+  width: fit-content;
 }
