--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -91,11 +91,10 @@
   border: 0.1ch solid rgba(46, 43, 43, 0.281);
   border-radius: 1ch;
   height: 26%;
-  width: 87%;
+  max-width: 87%;
   padding: 20px;
   line-height: 20px;
   background-color: rgba(177, 204, 204, 0.644);
   text-align: center;
-  resize: none;
   font-size: 15px;
 }
