--- a/src/CSS/MainPage.css
+++ b/src/CSS/MainPage.css
@@ -1,5 +1,5 @@
 .MainPage-geral{
-  background-color: rgba(124, 184, 184, 0.644);
+  background-color: #F6E9EE;
   display: flex;
   flex-direction: column;
   align-items: center;
