--- a/src/CSS/Search.css
+++ b/src/CSS/Search.css
@@ -135,6 +135,11 @@ padding-bottom: 10px;
   width: 11%;
 }
 
+#logo-text-search-off:hover {
+  color: rgb(221, 219, 219);
+  transition: 0.5s;
+}
+
 #logo-text-search-off {
   white-space: nowrap;
   overflow: hidden;
