--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  background-color: rgba(124, 184, 184, 0.644);
+  background-color: #F6E9EE;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
