--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -3,7 +3,7 @@
   border: 0.1ch solid rgba(46, 43, 43, 0.281);
   border-radius: 1.0em;
   font-family: sans-serif;
-  height: 75%;
+  height: 450px;
   line-height: 1px;
   margin: 0;
   max-width: 350px;
@@ -90,10 +90,10 @@
   background-color: white;
 }
 
-#descricao {
+.secao-carta #descricao {
   border: 0.1ch solid rgba(46, 43, 43, 0.281);
   border-radius: 1ch;
-  height: 40%;
+  height: 119px;
   max-width: 87%;
   padding: 20px;
   line-height: 20px;
