--- a/src/CSS/Form.css
+++ b/src/CSS/Form.css
@@ -28,7 +28,7 @@
   font-size: 15px;
   height: 35px;
   text-align: center;
-  width: 90px;
+  width: 80px;
   border-radius: 0.5ch;
   border-style: none;
   background-color: transparent;
@@ -36,6 +36,22 @@
   border-style: none;
   border-bottom:#7D7C7C solid 0.1cm;
   color: #4B4A4B;
+  outline-style: none;
+}
+
+.input-form-n-max {
+  font-size: 15px;
+  height: 35px;
+  text-align: center;
+  width: 80px;
+  border-radius: 0.5ch;
+  border-style: none;
+  background-color: transparent;
+  border-radius: 0.1ch;
+  border-style: none;
+  border-bottom:#7D7C7C solid 0.1cm;
+  color: #F96565;
+  outline-style: none;
 }
 
 .input-form {
@@ -50,6 +66,30 @@
   border-bottom: #7D7C7C solid 0.1cm;
   outline-style: none;
   color: #4B4A4B;
+}
+
+.input-form-max {
+  font-size: 15px;
+  height: 35px;
+  text-align: center;
+  width: 320px;
+  border-radius: 0.5ch;
+  border-style: none;
+  background-color: transparent;
+  border-style: none;
+  border-bottom: #7D7C7C solid 0.1cm;
+  outline-style: none;
+  color: #4B4A4B;
+  animation: treme 0.1s;
+  animation-iteration-count: 3;
+}
+
+@keyframes treme {
+  0% {margin-left: 0;}
+  25% {margin-left: 5px;}
+  50% {margin-left: 0;}
+  75% {margin-left: -5px;}
+  100% {margin-left: 0;}
 }
 
 #descricao-input {
@@ -96,7 +136,9 @@
 }
 
 .input-form:focus,
+.input-form-max:focus,
 .input-form-n:focus,
+.input-form-n-max:focus,
 .select-form-raridade:focus,
 .input-check-trunfo {
   border-radius: 1ch;
