--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -6,7 +6,16 @@
   width: 100vw;
   height: 50px;
   padding: 10px 0 10px 0;
-  background-color: #F96565;
+ background-color: #F96565 
+}
+
+#mid-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #F6E9EE;
+  font-size: 18px;
+  width: 105px;
 }
 
 #ir-baralho {
@@ -57,8 +66,8 @@
   color: rgba(255, 255, 255, 0.87);
 }
 
-#logo-icon {
-  padding-bottom: 10px;
+.header-icon {
+  padding-bottom: 8px;
 }
 
 #botao-area {
