--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,12 +1,11 @@
-.header {
+.header-baralho {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
+  justify-content: space-between;
   width: 100vw;
-  height: 50px;
+  height: 35px;
+  background-color: #F96565 ;
   padding: 10px 0 10px 0;
- background-color: #F96565 
 }
 
 #mid-header {
@@ -14,30 +13,14 @@
   align-items: center;
   justify-content: space-between;
   color: #F6E9EE;
-  font-size: 18px;
-  width: 105px;
-}
-
-#ir-baralho {
-  background-color: transparent;
-  color: #F6E9EE;
-  border-style: none;
-  font-size: 18px;
-}
-
-#ir-baralho:hover {
-  background-color: transparent;
-  color: #4B4A4B;
-  border-style: none;
-  font-size: 18px;
-  transform: scale(1.1);
-  transition: 0.5s;
+  font-size: 20px;
+  align-self: center;
 }
 
 #logo-card-area{
   align-items: center;
   display: flex;
-  width: 45%;
+  width: 20%;
 }
 
 #logo-text {
@@ -71,12 +54,27 @@
 }
 
 #botao-area {
-  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.botao-baralho {
-  display: flex;
-  align-items: center;
-  justify-content: left;
-  width: 100vw;
+#ir-baralhos, #ir-menu, #ir-colecao {
+  background-color: transparent;
+  color: #F6E9EE;
+  width: 100px;
+  height: 35px;
+  border-style: none;
+  font-size: 20px;
+}
+
+#ir-baralhos:hover,
+#ir-colecao:hover,
+#ir-menu:hover {
+  background-color: transparent;
+  color: #4B4A4B;
+  border-style: none;
+  font-size: 18px;
+  transform: scale(1.1);
+  transition: 0.5s;
 }
