--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: space-around;
   height: 10%;
-  color: #4B4A4B;
+  color: #152222;
 }
 
 #rare-card {
@@ -53,7 +53,7 @@
 }
 
 .textos-card-bottom {
-  color: #4B4A4B;
+  color: #152222;
   font-size: 18px;
   font-weight: 400;
   line-height: 15px;
@@ -116,4 +116,5 @@
   text-align: center;
   font-size: 15px;
   resize: none;
+  color: #152222;
 }
