--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 35px;
   background-color: #F96565 ;
-  padding: 10px 0 10px 0;
+  padding: 10px 0 10px 0 ;
 }
 
 #mid-header {
@@ -20,7 +20,8 @@
 #logo-card-area{
   align-items: center;
   display: flex;
-  width: 20%;
+  width: 15%;
+  padding-left: 10px;
 }
 
 #logo-text {
