--- a/src/CSS/Card.css
+++ b/src/CSS/Card.css
@@ -4,17 +4,24 @@
   border-radius: 1.0em;
   font-family: sans-serif;
   height: 450px;
-  line-height: 1px;
   margin: 0;
   width: 350px;
   padding: 10px;
-  text-align: center;
 }
 
 #carta-preview {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.top-preview {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 10%;
+  color: #4B4A4B;
+  font-size: 17px;
 }
 
 #carta-preview-text {
@@ -26,8 +33,8 @@
 #custo-card {
   background-image: url('../Images/custo.png');
   background-size: cover;
-  background-position: 40px;
-  width: 60px;
+  background-position: 38px;
+  width: 45px;
   height: 50px;
   display: flex;
   justify-content: center;
@@ -37,22 +44,15 @@
 
 #nome-card {
   width: 480px;
-}
-
-.top-preview {
-  align-items: center;
-  display: flex;
-  justify-content: space-around;
-  height: 10%;
-  color: #152222;
+  z-index: 1;
 }
 
 #rare-card {
-  text-align: center;
-  width: 80px;
+  width: 115px;
+  z-index: 0;
 }
 
-.textos-card-bottom {
+.status {
   color: #152222;
   font-size: 18px;
   font-weight: 400;
@@ -103,12 +103,14 @@
   width: 25%;
   font-size: 15px;
   font-weight: 400;
+  padding: 2px;
   margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 .secao-carta #descricao {
   border-style: none;
-  height: 100px;
+  height: 120px;
   width: 308px;
   padding: 20px;
   line-height: 20px;
