--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -62,7 +62,7 @@
   padding-right: 10px;
 }
 
-#ir-baralhos, #ir-menu, #ir-colecao {
+#ir-decks, #ir-menu, #ir-colecao {
   background-color: transparent;
   color: #F6E9EE;
   width: 100px;
